actuator added with security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+#management.endpoints.web.exposure.exclude=health,info
+info.app.name=My Test App
+info.app.description=A crazy test app!
+info.app.version=1.0.0
