custom application properties added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ management.info.env.enabled=true
 info.app.name=My Test App
 info.app.description=A crazy test app!
 info.app.version=1.0.0
+
+
+#Custom properties
+coder.nickname=Snitch
+coder.team=Kermit
