--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
@@ -7,7 +6,10 @@ info.app.name=My Test App
 info.app.description=A crazy test app!
 info.app.version=1.0.0
 
-
 #Custom properties
 coder.nickname=Snitch
 coder.team=Kermit
+
+server.port=7070
+
+server.servlet.context-path=/myapp
